// ============================================================================
// /service/field-service-dispatch-service (版本 2.0)
// 描述: 管理现场服务订单的调度和执行。
//       字段设计参考核心ERP的服务订单 (类似AUFK) 和资源计划表。
// ============================================================================

syntax = "proto3";

package cs.fd.v1;

option go_package = "github.com/enterprise/erp/protos/cs/fd;fd";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: FieldServiceDispatchService
// ============================================================================

service FieldServiceDispatchService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "管理现场服务订单的调度和执行。"
  };
  // 获取服务订单详情
  rpc GetServiceOrder(GetServiceOrderRequest) returns (ServiceOrderDetail) {

    option (google.api.http) = {

      get: "/api/v1/service/service-order"

    };

  }

  // 查询服务订单列表 (New)
  rpc ListServiceOrders(ListServiceOrdersRequest) returns (ListServiceOrdersResponse) {


    option (google.api.http) = {


      get: "/api/v1/service/service-orders"


    };


  }

  // 将技术人员分配到服务订单
  rpc AssignTechnician(AssignTechnicianRequest) returns (AssignTechnicianResponse) {


    option (google.api.http) = {


      post: "/api/v1/service/technician/assign"


      body: "*"


    };


  }
  
  // 取消分配 (New)
  rpc CancelAssignment(CancelAssignmentRequest) returns (AssignTechnicianResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/service/assignment/cancel"

  
      body: "*"

  
    };

  
  }
  
  // 重新调度订单 (New)
  rpc RescheduleOrder(RescheduleOrderRequest) returns (ServiceOrderDetail) {

  
    option (google.api.http) = {

  
      post: "/api/v1/service/reschedule-order"

  
      body: "*"

  
    };

  
  }

  // 更新服务订单状态
  rpc UpdateServiceOrderStatus(UpdateServiceOrderStatusRequest) returns (UpdateServiceOrderStatusResponse) {


    option (google.api.http) = {


      put: "/api/v1/service/service-order-status"


      body: "*"


    };


  }
}

// ============================================================================
// 数据结构: ServiceOrder (服务订单)
// ============================================================================

// 服务订单详情
message ServiceOrderDetail {
  string order_number = 1;
  common.v1.ServiceOrderType order_type = 2;
  string customer_id = 3;
  common.v1.Address service_location = 4;
  string description = 5;
  google.protobuf.Timestamp planned_start_datetime = 6;
  string assigned_technician_id = 7;
  common.v1.ServiceOrderStatus status = 8;
  common.v1.AuditData audit_data = 9;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 获取服务订单请求
message GetServiceOrderRequest {
  string order_number = 1;
  common.v1.RequestContext context = 99;
}

message ListServiceOrdersRequest {
  string technician_id = 1;
  string customer_id = 2;
  common.v1.DateRange date_range = 3;
  common.v1.ServiceOrderStatus status_filter = 4;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListServiceOrdersResponse {
  repeated ServiceOrderDetail orders = 1;
  common.v1.PaginationResponse pagination = 2;
}

// 分配技术人员请求
message AssignTechnicianRequest {
  string order_number = 1;
  string technician_id = 2;
  google.protobuf.Timestamp scheduled_datetime = 3;
  common.v1.RequestContext context = 99;
}

// 分配技术人员响应
message AssignTechnicianResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message CancelAssignmentRequest {
  string order_number = 1;
  string reason = 2;
  common.v1.RequestContext context = 99;
}

message RescheduleOrderRequest {
  string order_number = 1;
  google.protobuf.Timestamp new_start_datetime = 2;
  string reason = 3;
  common.v1.RequestContext context = 99;
}

// 更新服务订单状态请求
message UpdateServiceOrderStatusRequest {
  string order_number = 1;
  common.v1.ServiceOrderStatus new_status = 2;
  string notes = 3;
  common.v1.RequestContext context = 99;
}

// 更新服务订单状态响应
message UpdateServiceOrderStatusResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}
