// ============================================================================
// /hr/talent-acquisition-service (版本 2.0)
// 描述: 提供与人才招聘相关的功能，如职位申请管理和候选人跟踪。
//       字段设计参考核心ERP的人才管理模块表结构。
// ============================================================================

syntax = "proto3";

package hr.ta.v1;

option go_package = "github.com/enterprise/erp/protos/hr/ta;ta";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: TalentAcquisitionService
// ============================================================================

service TalentAcquisitionService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "提供与人才招聘相关的功能，如职位申请管理和候选人跟踪。"
  };
  // 创建职位申请 (New)
  rpc CreateJobApplication(CreateJobApplicationRequest) returns (JobApplicationResponse) {

    option (google.api.http) = {

      post: "/api/v1/hr/job-application"

      body: "*"

    };

  }
  
  // 提交简历 (New)
  rpc SubmitResume(SubmitResumeRequest) returns (JobApplicationResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/hr/resume/submit"

  
      body: "*"

  
    };

  
  }

  // 获取职位申请列表
  rpc ListJobApplications(ListJobApplicationsRequest) returns (ListJobApplicationsResponse) {


    option (google.api.http) = {


      get: "/api/v1/hr/job-applications"


    };


  }

  // 获取单个职位申请详情
  rpc GetJobApplication(GetJobApplicationRequest) returns (JobApplicationDetail) {


    option (google.api.http) = {


      get: "/api/v1/hr/job-application"


    };


  }

  // 更新职位申请状态
  rpc UpdateJobApplicationStatus(UpdateJobApplicationStatusRequest) returns (UpdateJobApplicationStatusResponse) {


    option (google.api.http) = {


      put: "/api/v1/hr/job-application-status"


      body: "*"


    };


  }
  
  // 安排面试 (New)
  rpc ScheduleInterview(ScheduleInterviewRequest) returns (ScheduleInterviewResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/hr/schedule-interview"

  
      body: "*"

  
    };

  
  }
}

// ============================================================================
// 数据结构: JobApplication (职位申请)
// ============================================================================

// 职位申请详情
message JobApplicationDetail {
  string application_id = 1;
  string requisition_id = 2;
  string requisition_title = 3;
  CandidateInfo candidate = 4;
  common.v1.ApplicationStatus status = 5;
  google.protobuf.Timestamp application_date = 6;
  repeated ApplicationAttachment attachments = 7;
  repeated InterviewSchedule interviews = 8;
  common.v1.AuditData audit_data = 9;
}

// 候选人信息
message CandidateInfo {
  string candidate_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string resume_url = 6;
}

// 申请附件
message ApplicationAttachment {
  string attachment_id = 1;
  string file_name = 2;
  string attachment_type = 3;
  string url = 4;
}

// 面试安排
message InterviewSchedule {
  string interview_id = 1;
  common.v1.InterviewType interview_type = 2;
  google.protobuf.Timestamp scheduled_time = 3;
  string interviewer_id = 4;
  string location = 5;
  string notes = 6;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

message CreateJobApplicationRequest {
  string requisition_id = 1;
  CandidateInfo candidate = 2;
  common.v1.RequestContext context = 99;
}

message SubmitResumeRequest {
  string requisition_id = 1;
  string candidate_email = 2;
  string resume_url = 3;
  common.v1.RequestContext context = 99;
}

message JobApplicationResponse {
  bool success = 1;
  string application_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 查询职位申请请求
message ListJobApplicationsRequest {
  string requisition_id = 1;
  common.v1.ApplicationStatus status = 2;
  common.v1.DateRange application_date_range = 3;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

// 查询职位申请响应
message ListJobApplicationsResponse {
  repeated JobApplicationSummary applications = 1;
  common.v1.PaginationResponse pagination = 2;
}

// 职位申请摘要
message JobApplicationSummary {
  string application_id = 1;
  string requisition_title = 2;
  string candidate_name = 3;
  common.v1.ApplicationStatus status = 4;
  google.protobuf.Timestamp application_date = 5;
}

// 获取职位申请详情请求
message GetJobApplicationRequest {
  string application_id = 1;
  common.v1.RequestContext context = 99;
}

// 更新职位申请状态请求
message UpdateJobApplicationStatusRequest {
  string application_id = 1;
  common.v1.ApplicationStatus new_status = 2;
  string notes = 3;
  common.v1.RequestContext context = 99;
}

// 更新职位申请状态响应
message UpdateJobApplicationStatusResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message ScheduleInterviewRequest {
  string application_id = 1;
  InterviewSchedule interview = 2;
  common.v1.RequestContext context = 99;
}

message ScheduleInterviewResponse {
  bool success = 1;
  string interview_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}
